--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
               <a class="nav-link " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link "  href="about.html">About</a>
+              <a class="nav-link" href="about.html" target="_blank">About</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,7 +43,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="contact.html" target="_blank">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
